[package]
name = "toboggan"
version = "0.1.0"
authors = ["Léo Gaspard <leo@gaspard.io>"]
license = "GPL-3.0"

[dependencies]
clap = "2.19.3"
lazy_static = "0.2.2"
libc = "0.2.19"
regex = "0.1"
serde = "0.8.21"
serde_json = "0.8.4"

[[bin]]
name = "toboggan"
path = "src/main.rs"

[[bin]]
name = "toboggan-asker"
path = "src/asker.rs"
